# stainless-git

./: Cargo.toml
src/: dag_layout.rs  dump_git_layout.rs  gtk_futures_executor.rs  main.rs
src/async_ui/: capture.rs  event_future.rs  gtk_futures_executor.rs  mod.rs  promise.rs
src/screens/: intro_screen.rs  main_screen.rs  mod.rs
