[package]
name = "stainless-git"
version = "0.1.0"
authors = ["Dmitry Kalyanov <Kalyanov.Dmitry@gmail.com>"]
edition = "2018"

[dependencies]
futures-cpupool = "0.1.8"
futures = "0.1.25"
glib = "0.6.1"
gdk = "0.9.0"
pango = "0.5.0"
git2 = "0.8.0"
chrono = "0.4.6"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]
