[package]
name = "stainless-git"
version = "0.1.0"
authors = ["Dmitry Kalyanov <Kalyanov.Dmitry@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
glib = "0.8.2"
gdk = "0.11.0"
pango = "0.7.0"
git2 = "0.10.2"
chrono = "0.4.10"
async-std = "1.4.0"

[dependencies.gtk]
version = "0.7.0"
features = ["futures"]
